added text about the next step

--- a/home.html
+++ b/home.html
@@ -13,6 +13,7 @@
 
 <body>
     <h1> Hello, stay tuned! </h1>
+    <p class='box'> thanks for enabling your microphone! next time you will be playing a fascinating word game and win big gift boxes. I will be right back! </p>
     <img src="kip.jpeg" alt='chipmunk looking with full cheek pockets' width='500' height='400'>
     <script src="sketch.js"></script>
 </body>
